@@ -12,13 +12,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.12.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <encoding>utf-8</encoding>
+          <source>17</source>
+          <target>17</target>
           <compilerArgs>
             <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
+            <arg>--add-exports</arg>
+            <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -27,9 +28,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
+        <version>3.2.5</version>
         <configuration>
           <argLine>
+            --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
           </argLine>
           <trimStackTrace>false</trimStackTrace>
@@ -44,11 +46,11 @@
       <url>https://jitpack.io</url>
     </repository>
     <repository>
-      <id>peg-mvn-repo</id>
+      <id>peg-mvn-repo</id> <!-- peg -->
       <url>https://raw.github.com/jeronimonunes/PEG/mvn-repo/</url>
     </repository>
     <repository>
-      <id>gitlab-maven</id>
+      <id>gitlab-maven</id> <!-- vavi-text-aozora -->
       <url>https://gitlab.com/api/v4/projects/39845225/packages/maven</url>
     </repository>
   </repositories>
@@ -58,7 +60,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.9.1</version>
+        <version>5.14.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -69,18 +71,18 @@
     <dependency>
       <groupId>vavi</groupId>
       <artifactId>vavi-text-aozora</artifactId>
-      <version>0.0.2</version>
+      <version>0.0.3</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.13</version>
     </dependency>
     <dependency>
-      <groupId>com.github.umjammer.vavi-apps-fuse</groupId>
+      <groupId>com.github.umjammer.vavi-apps-fuse</groupId> <!-- vavi / com.github.umjammer.vavi-apps-fuse -->
       <artifactId>vavi-nio-file-archive</artifactId>
-      <version>0.1.8</version>
+      <version>0.1.10</version>
     </dependency>
     <dependency>
       <groupId>com.github.umjammer</groupId>
@@ -90,13 +92,13 @@
     <dependency>
       <groupId>com.github.albfernandez</groupId>
       <artifactId>juniversalchardet</artifactId>
-      <version>2.4.0</version>
+      <version>2.5.0</version>
     </dependency>
 
     <dependency>
       <groupId>com.formdev</groupId>
       <artifactId>flatlaf</artifactId>
-      <version>2.6</version>
+      <version>3.5</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -125,8 +127,20 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.10</version>
+      <version>2.13.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino</artifactId>
+      <version>1.8.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency> <!-- for jsr-223 -->
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino-engine</artifactId>
+      <version>1.8.1</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
